--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ function scrollToSection(event) {
 		<section>
 			<h3>Education</h3>
 			<ul>
-				<li><strong>University of  Teknology Malaysia </strong> - Bachelor of  Computer Science Software Engineering  (Expected Graduation: 2024)</li>
+				<li><strong>University of  Teknology Malaysia(UTM) </strong> - Bachelor of  Computer Science Software Engineering  (Expected Graduation: 2023)</li>
+				<li><strong>Chittagong University of Engineering and Technology (CUET) </strong> - Bachelor of  Computer Science Software Engineering</li>
 				<li><strong> Notre Dame college  </strong> -  Higher secondary  (Graduated: 2017)</li>
 			</ul>
 		</section>
