--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function scrollToSection(event) {
 			<h3>Education</h3>
 			<ul>
 				<li><strong>University of  Teknology Malaysia(UTM) </strong> - Bachelor of  Computer Science Software Engineering  (Expected Graduation: 2023)</li>
-				<li><strong>Chittagong University of Engineering and Technology (CUET) </strong> - Bachelor of  Computer Science and Engineering</li>
+				<li><strong>Chittagong University of Engineering and Technology (CUET) </strong> - Bachelor of  Computer Science & Engineering</li>
 				<li><strong> Notre Dame college  </strong> -  Higher secondary  (Graduated: 2017)</li>
 			</ul>
 		</section>
