--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ function scrollToSection(event) {
 	<header>
 		<img src="khaled.png" alt="Khaled Mahmud Sujon" class="profile-picture">
 		<h1>Khaled Mahmud Sujon</h1>
-		<h2>Teacher | Student | Web Developer</h2>
+		<h2>Teacher | Student | Web Developer| YOGA</h2>
 		<nav>
 			<ul class="navigation">
 				<li><a href="contact.html"> Ask ME </a></li>
